 361448 make statusbar use less vertical space (Michael Monreal)
 362436 retrieving group list runs forever (Guilhèm Bonnefille, Søren Boll Overgaard)
 364357 repeated server error messages (J. D. McKim)
 365990 pan doesn't encode sender when sending (Christophe)
 363268 mixed-charset messages get garbled (Michael Rasmussen)
 366542 crash with "ignore thread" when no thread selected
 366665 author with @ in "real name" gets chopped up (Chris Petersen)
 367578 crash when subscribing to an allready subscribed group. (Axion)
 369008 make crc32 checking 50% faster (Charles)

0.117 "We'll fly and we'll fall and we'll burn"
 361941 Slow download / Download corrupted in 0.116, fix included (Stéphane BERTHELOT)
 355047 article download becomes saving after restart (K Haley, Duncan)
 360406 pop up a message when post is refused by server (Frederic Crozat)
 361121 pan icon love (Michael Monreal)
 361445 Headers pane always has a scrollbar (Michael Monreal)
 361885 Cannot background compose window (Ken Bloom)
 354831 Pan silently removes characters when sending articles (Artur Jachacy)

0.116 "Blanton's"
 360375 non-ascii subject is mangled
 357735 crash when updating headers (David Kelly)
 358061 better use of server connections. (Adam Huffman)
 359197 speed up downloads from news server. (Avi Drissman, Christophe GISQUET)
 358654 pan-0.115 fails to compile - error in article.{c,h} (Jack Cuyler)
 358710 Tasks has an empty tooltip when idle (Adrian Yee)
 358717 Order of files added to queue (Adrian Yee)
 358211 Get New Headers expands selected collapsed thread (Douglas Bollinger)
 359171 download files with same name -> mangled suffixes (Jerry Segers, Jr.)
 361144 xover tasks should be inserted at the top of the queue (David)
 360373 missing utf8 conversion in error messages (Frederic Crozat)
 360725 changing the default color of positive scores (Anthony DeRobertis)

0.115 "Tip Jar"
 358077 cut memory use in half for large binaries groups (Charles)