@@ -9,6 +9,7 @@
  365990 pan doesn't encode sender when sending (Christophe)
  363268 mixed-charset messages get garbled (Michael Rasmussen)
  366542 crash with "ignore thread" when no thread selected
+ 366663 sort history is not maintained when "flipping" a column (Chris Petersen)
  366665 author with @ in "real name" gets chopped up (Chris Petersen)
  367578 crash when subscribing to an allready subscribed group. (Axion)
  369008 make crc32 checking 50% faster (Charles)
